--- a/README.html
+++ b/README.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>overview.md</title>
+<title>README.md</title>
 <meta http-equiv="Content-type" content="text/html;charset=UTF-8">
 
 <style>
@@ -366,7 +366,6 @@ code {
     });
   </script>
 <h1 id="using-large-language-models-llms-for-text-summarization">Using Large Language Models (LLMs) for Text Summarization</h1>
-<p><a href="https://github.com/RS-101/adl_midterm">Github repo</a></p>
 <h2 id="introduction">Introduction</h2>
 <p>This assignment explores text summarization using Large Language Models (LLMs) available through Hugging Face Transformers. The goal is to implement and evaluate an LLM-based summarization model for generating concise summaries from provided text data.</p>
 <hr>
